Finish evaluation 5.3 performance

--- a/paper/final/report.bib
+++ b/paper/final/report.bib
@@ -1,5 +1,11 @@
 % Encoding: UTF-8
 
+@misc{haproxy-they-use-it,
+  title = {{HAProxy} - They use it!},
+  howpublished = {\url{https://www.haproxy.org/they-use-it.html}},
+  note = {Accessed: 2019-12-13}
+}
+
 @Article{1994-ClarkeEtAl,
   author    = {Edmund M. Clarke and Orna Grumberg and David E. Long},
   title     = {Model checking and abstraction},
