--- a/paper/final/report.tex
+++ b/paper/final/report.tex
@@ -59,6 +59,8 @@
 % inlined bib file
 \usepackage{filecontents}
 
+\usepackage{booktabs} % Top and bottom rules for tables
+
 %-------------------------------------------------------------------------------
 %   CODE INCLUSION CONFIGURATION
 %-------------------------------------------------------------------------------
