finishing first four section of final report.

--- a/paper/final/report.tex
+++ b/paper/final/report.tex
@@ -81,6 +81,8 @@
         %numberstyle=\scriptsize\ttfamily\color{Brown},
 }
 
+\input{newcommands}
+
 %-------------------------------------------------------------------------------
 \begin{document}
 %-------------------------------------------------------------------------------
@@ -139,7 +141,7 @@ experiment, and the challenges we have encountered.
 
 %-------------------------------------------------------------------------------
 \bibliographystyle{plain}
-\bibliography{\jobname}
+\bibliography{\jobname,other}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
