--- a/paper/final/report.tex
+++ b/paper/final/report.tex
@@ -61,6 +61,8 @@
 
 \usepackage{booktabs} % Top and bottom rules for tables
 
+\input{newcommands}
+
 %-------------------------------------------------------------------------------
 %   CODE INCLUSION CONFIGURATION
 %-------------------------------------------------------------------------------
@@ -82,8 +84,6 @@
         %firstnumber=1, % Line numbers start with line 1
         %numberstyle=\scriptsize\ttfamily\color{Brown},
 }
-
-\input{newcommands}
 
 %-------------------------------------------------------------------------------
 \begin{document}
@@ -143,7 +143,7 @@ experiment, and the challenges we have encountered.
 
 %-------------------------------------------------------------------------------
 \bibliographystyle{plain}
-\bibliography{\jobname,other}
+\bibliography{\jobname}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
