--- a/paper/final/section/design.tex
+++ b/paper/final/section/design.tex
@@ -29,7 +29,7 @@ middleboxes, which would accept/terminate the incoming connection and initiate a
 new one, so that we treat each connection as request and reply application-layer
 packets.
 
-\subsection{Binary Ananlysis}
+\subsection{Binary ananlysis}
 %-----------------------------------
 
 % intro to angr, its abilities
@@ -52,7 +52,7 @@ Espetially, HAProxy provides several load balance algorithms, to idientify and a
 As the result, We decide to write a simple load balancer based on only three most frequently used load balance algorithm, \ca round-robin, \cb least-connection-first and \cc source-based hashing.
 The detail and the implementation of this load balancer is introduced in following section.
 
-\subsection{Simple Load Balancer}
+\subsection{Simple load balancer}
 %-----------------------------------
 
 % design overview:
