--- a/paper/final/section/background.tex
+++ b/paper/final/section/background.tex
@@ -44,17 +44,17 @@ NIDS mode, on the other hand, is much interesting since it performs detection an
 Apart from acting as a stateless firewall, Snort’s "\textbf{flow}" keyword, used in conjunction with session tracking, allows Snort to track and take action on tcp packets depending on the tcp session state and its flag value.
 This functionality gives a network operator very finegrained control on Snort’s behavior.
 
-\subsection{Binary Analysis Tools}
+\subsection{Binary analysis tools}
 Binary analysis tools are used for analyzing bianry codes.
 Since there are various middleboxes are provided under copyright or without open srouce, it is reasonable to assume the binary code is the best source we can use for analyzing the middleboxes.
 Two binary analysis tools are targeted to be the candidate for this project.
 
 \subsubsection{BAP}
 BAP is a program analysis platform written inOCaml, but also comes with Python and C binding libraries.
-It basically disassembles the binary code andlifts it into their own RISC-like BAP Instruction Language (BIL) representation, on which program analysis is performed. 
+It basically disassembles the binary code andlifts it into their own RISC-like BAP Instruction Language (BIL) representation, on which program analysis is performed.
 We have explored a few of BAP’s core functions, such as constructing controlflow graph (CFG) and call graph (CG) given a program binary.
 Control flow graph is a directed graph where eachnode is a code block of sequential instructions without branches, except for the beginning and the end of the block, and each edge is a branch from one block toanother.
 Call graph,  nonetheless,  is a directed graphconsisting of code blocks of functions with edges be-ing function calls or returning to the caller function.
 
-\subsubsection{Angr}
+\subsubsection{angr}
 
