--- a/paper/final/report.bib
+++ b/paper/final/report.bib
@@ -18,7 +18,22 @@
   pagetotal = 27,
   year =      2002,
   month =     feb,
-  abstract =  {This document is intended as part of an IETF discussion about "middleboxes" - defined as any intermediary box performing functions apart from normal, standard functions of an IP router on the data path between a source host and destination host. This document establishes a catalogue or taxonomy of middleboxes, cites previous and current IETF work concerning middleboxes, and attempts to identify some preliminary conclusions. It does not, however, claim to be definitive. This memo provides information for the Internet community.},
+}
+
+@Article{2017-Newton,
+  author  = {Casey Newton},
+  title   = {How a typo took down {S3}, the backbone of the internet},
+  journal = {The Verge},
+  year    = {2017},
+  url     = {https://www.theverge.com/2017/3/2/14792442/amazon-s3-outage-cause-typo-internet-server},
+}
+
+@Article{2018-Speed,
+  author  = {Richard Speed},
+  title   = {Microsoft {Azure}: it's getting hot in here, so shut down all your cores},
+  journal = {The Register},
+  year    = {2018},
+  url     = {https://www.theregister.co.uk/2018/09/04/azure_its_getting_hot_in_here/},
 }
 
 @Article{1994-ClarkeEtAl,
